styling and method changed to allow images to be in html file

--- a/index.html
+++ b/index.html
@@ -5,14 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="static/css/style.css">
-    <script src="static/js/script.js"></script>
 </head>
 <body>
   <h3>
     Score:<span id='result'></span>
   </h3> 
-  <div class="grid">
-  
-  </div>   
+  <section class="memory-game">
+    <div class="memory-card">
+      <img class="front-face" src="static/images/html.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+    <div class="memory-card">
+      <img class="front-face" src="static/images/html.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+    <div class="memory-card">
+      <img class="front-face" src="static/images/css.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+    <div class="memory-card">
+      <img class="front-face" src="static/images/css.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+    <div class="memory-card">
+      <img class="front-face" src="static/images/django.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+     <div class="memory-card">
+      <img class="front-face" src="static/images/django.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+     <div class="memory-card">
+      <img class="front-face" src="static/images/flask.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+     <div class="memory-card">
+      <img class="front-face" src="static/images/flask.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+     <div class="memory-card">
+      <img class="front-face" src="static/images/js.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+     <div class="memory-card">
+      <img class="front-face" src="static/images/js.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+     <div class="memory-card">
+      <img class="front-face" src="static/images/python.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+     <div class="memory-card">
+      <img class="front-face" src="static/images/python.png" alt="html">
+      <img class="back-face" src="static/images/button.png" alt="html">
+    </div>
+  </section>
+  <script src="static/js/script.js"></script>  
 </body>
 </html>
