--- a/index.html
+++ b/index.html
@@ -11,51 +11,51 @@
     Score:<span id='result'></span>
   </h3> 
   <section class="memory-game">
-    <div class="memory-card">
+    <div class="memory-card" data-framework = 'html'>
       <img class="front-face" src="static/images/html.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" data-framework = 'html'>
       <img class="front-face" src="static/images/html.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" data-framework = 'css'>
       <img class="front-face" src="static/images/css.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" data-framework = 'css'>
       <img class="front-face" src="static/images/css.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-    <div class="memory-card">
+    <div class="memory-card" data-framework = 'django'>
       <img class="front-face" src="static/images/django.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-     <div class="memory-card">
+     <div class="memory-card" data-framework = 'django'>
       <img class="front-face" src="static/images/django.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-     <div class="memory-card">
+     <div class="memory-card" data-framework = 'flask'>
       <img class="front-face" src="static/images/flask.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-     <div class="memory-card">
+     <div class="memory-card" data-framework = 'flask'>
       <img class="front-face" src="static/images/flask.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-     <div class="memory-card">
+     <div class="memory-card" data-framework = 'js'>
       <img class="front-face" src="static/images/js.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-     <div class="memory-card">
+     <div class="memory-card" data-framework = 'js'>
       <img class="front-face" src="static/images/js.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-     <div class="memory-card">
+     <div class="memory-card" data-framework = 'python'>
       <img class="front-face" src="static/images/python.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
-     <div class="memory-card">
+     <div class="memory-card" data-framework = 'python'>
       <img class="front-face" src="static/images/python.png" alt="html">
       <img class="back-face" src="static/images/button.png" alt="html">
     </div>
